Fix overlap issue on contact page title bar

--- a/themes/trc/sass/_contact.scss
+++ b/themes/trc/sass/_contact.scss
@@ -58,6 +58,7 @@
       padding-top: 10px;
       position: fixed;
       margin-top: 100px;
+      z-index: 99;
     }
   }
 
