--- a/themes/trc/style.css
+++ b/themes/trc/style.css
@@ -4415,7 +4415,8 @@ object {
         padding-left: 100px;
         padding-top: 10px;
         position: fixed;
-        margin-top: 100px; } }
+        margin-top: 100px;
+        z-index: 99; } }
   .page-template-contact-php .hero-banner {
     background: url("../../assets/Images/Mobile/contact/tekera_contact_us_vocational_school.png");
     background-size: cover;
